# osqp-release

./: 0001-Added-install-rule-for-package.xml.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
noetic/: package.xml
rpm/: ros-noetic-osqp.spec  template.spec
