<?xml version="1.0"?>
<package>
  <name>osqp</name>
  <version>:{version}</version>
  <description>The Operator Splitting QP Solver</description>
  <author>University of Oxford Control Group</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <url type="website">https://osqp.org/</url>
  <url type="repository">https://github.com/oxfordcontrol/osqp</url>
  <license>Apache 2.0</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
